<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />


            <TextView
                android:id="@+id/tv_item_jl_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/s_task_model"
                android:textColor="@color/c_h_nf_title"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_item_jl_time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="2016-05-31"
                android:textColor="@color/c_h_nf_time"
                android:textSize="12sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="6dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:background="@color/c_is_finish"
            android:gravity="center"
            android:text="@string/s_is_finish"
            android:textColor="@color/c_text"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_un_finish"
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:background="@color/c_un_finish"
            android:gravity="center"
            android:text="@string/s_un_finish"
            android:textColor="@color/c_text"
            android:textSize="13sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_to_upload"
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="12dp"
            android:background="@color/c_to_upload"
            android:gravity="center"
            android:text="@string/s_to_upload"
            android:textColor="@color/c_text"
            android:textSize="13sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c_h_nf_divider" />

</LinearLayout>

