<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/ns_r"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/tv_record_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="00:00"
                        android:textSize="40sp"
                        android:textColor="@color/c_record_time"/>

                    <ImageView
                        android:id="@+id/iv_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/btn_clue_audio" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/c_h_divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tv_title_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="17dp"
                        android:gravity="center_vertical"
                        android:text="@string/s_title_event"
                        android:textColor="@color/c_tab_un_text"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_title_event_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@color/c_et_bg"
                        android:hint="@string/s_title_event_input"
                        android:textColor="@color/c_tab_un_text"
                        android:textSize="15sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/c_h_divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tv_descriptor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="17dp"
                        android:gravity="center_vertical"
                        android:text="@string/s_descriptor"
                        android:textColor="@color/c_tab_un_text"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/et_descriptor_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@color/c_et_bg"
                        android:hint="@string/s_descriptor_input"
                        android:textColor="@color/c_tab_un_text"
                        android:textSize="15sp" />


                </LinearLayout>
                <Button
                    android:id="@+id/b_r_save"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/b_confim_bg"
                    android:text="@string/s_b_save"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_margin="20sp"/>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>
</layout>

